Add back in nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700|Source+Code+Pro:400' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
-<nav id="globalnav" role="navigation">
-  <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
-    {% include logotype.html %}
-  </a>
-</nav>
-
+{% include header.html %}
 <main id="main" role="main">
 {{ content }}
 </main>
-
