--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,13 @@
   <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
     {% include logotype.html %}
   </a>
-  {% assign default_paths = site.pages | map: "path" %}
-  {% assign page_paths = site.header_pages | default: default_paths %}
+  {% assign page_paths = site.header_pages %}
   {% if page_paths %}
       <div class="trigger">
         {% for path in page_paths %}
           {% assign my_page = site.pages | where: "path", path | first %}
           {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.slug | capitalize }}</a>
           {% endif %}
         {% endfor %}
       </div>
