--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700|Source+Code+Pro:400' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700|Source+Code+Pro:400|Source+Serif+Pro:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 {% include header.html %}
 <main id="main" role="main">
