--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,17 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<time>{{ page.date }}</time>
-{{ content }}
+{% assign author = page.author
+<article>
+  <header>
+    <h1>{{ page.title }}</h1>
+    <em class="author">{{ page.author }}</em>
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%-d %B %Y" }}</time>
+  </header>
+  <div class="content">
+  {{ content }}
+  </div>
+  <footer>
+  {{ page.author }}
+  </footer>
+</article>
