Fixes syntax error.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% assign author = page.author
+{% assign author = page.author %}
 <article>
   <header>
     <h1>{{ page.title }}</h1>
