--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% assign author = page.author %}
-<article>
+<article class="single post">
   <header>
     <h1>{{ page.title }}</h1>
     <em class="author">{{ page.author }}</em>
