--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,23 @@
 ---
 layout: default
 ---
-{% assign author = page.author %}
+{% assign authors = site.people | where: "slug", page.author %}
 <article class="single post">
   <header>
     <h1>{{ page.title }}</h1>
-    <em class="author">{{ page.author }}</em>
-    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%-d %B %Y" }}</time>
+    <span class="author">By {% for author in authors %}<a href="{{ site.baseurl }}/people/{{page.author}}/">{{ author.name }}</a>{% endfor %}
+</span>
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
   </header>
   <div class="content">
   {{ content }}
   </div>
   <footer>
-  {{ page.author }}
+    {% for author in authors %}
+      {% assign author_categories = author.people-category | join: "," %}
+      <div class="person-image"><img src="{{ site.baseurl }}/assets/images/people/{{ page.author }}.jpg" alt=""></div>
+      <p><a href="{{ site.baseurl }}/people/{{page.author}}/">{{ author.name }}</a> is {{ author.position }}{% if author_categories contains 'Staff' %} in the {{ site.title }}{% endif %}.</p>
+    {% endfor %}
+
   </footer>
 </article>
