Research/Lab pages layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-
+<main id="main" role="main">
   {{ content }}
 
   <h1 class="page-heading">Posts</h1>
@@ -22,5 +22,5 @@ layout: default
   </ul>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+</main>
 </div>
