--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<main id="main" role="main">
 {% assign authors = site.people | where: "slug", page.author %}
 <article class="single post">
   <header>
@@ -21,3 +22,4 @@ layout: default
 
   </footer>
 </article>
+</main>
