--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 ---
+<main id="main" role="main">
 <article class="post">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
-
+</main>
   <div class="post-content">
     {{ content }}
   </div>
