Swap alignment directions

--- a/styles.scss
+++ b/styles.scss
@@ -229,7 +229,7 @@ display: block;
 	width: 300px;
 	height: 300px;
 	position: relative;
-	float: right;
+	float: left;
 }
 .research-caption {
 	background:#000019;
