Single tweet stream started
For #29, still needs styling

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,13 @@ layout: default
 <main id="main" role="main">
   {{ content }}
 
+<a class="twitter-timeline"
+  href="https://twitter.com/ScholarsLab"
+  data-tweet-limit="1"
+data-chrome="nofooter noborders noscrollbar noheader transparent">
+>
+</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
   <h1 class="page-heading">Posts</h1>
 
   <ul class="post-list">
