--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,8 @@ layout: default
       {% assign author_categories = author.people-category | join: "," %}
       <div class="person-image"><img src="{{ site.baseurl }}/assets/images/people/{{ page.author }}.jpg" alt="{{ author.name }}"></div>
       <p><a href="{{ site.baseurl }}/people/{{page.author}}/">{{ author.name }}</a> is {{ author.position }}{% if author_categories contains 'Staff' %} in the {{ site.title }}{% endif %}.</p>
+
+<p>Cite this post: {{ author.name }}. "{{ page.title }}". Published {{ page. date }}. <a href="{{site.url}}/{{page.url}}">{{site.url}}/{{page.url}}</a>.</p>
     {% endfor %}
 
   </footer>
