--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -4,18 +4,12 @@ layout: page
 <main id="main" role="main">
 {{ content }}
 
-{% assign profile_picture = site.static_files | where: file.basename, page.slug %}
-{% for file in site.static_files %}
-  {% if file.basename == page.slug %}
-    {% assign profile_picture = file.basename %}
-  {% endif %}
+{% assign profile_pictures = site.static_files | where: "basename",page.slug | limit: 1 %}
+
+{% for profile_picture in profile_pictures %}
+  <img src="{{ profile_picture.path }}">
 {% endfor %}
 
-{% if profile_picture == empty %}
-  {% assign profile_picture = 'placeholder' %}
-{% endif %}
-
-<img src="{{ site.url }}/assets/images/{{ profile_picture }}.jpg">
 {% if author_posts %}
   <h2>Posts by {{ page.title }}</h2>
   <nav class="posts">
