Adds empty alt attribute.

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -7,7 +7,7 @@ layout: page
 {% assign profile_pictures = site.static_files | where: "basename",page.slug | limit: 1 %}
 
 {% for profile_picture in profile_pictures %}
-  <img src="{{ profile_picture.path }}">
+  <img src="{{ profile_picture.path }}" alt="">
 {% endfor %}
 
 {% assign author_posts = site.posts | where: "author", page.slug %}
