Fix image pasth on posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
   <footer>
     {% for author in authors %}
       {% assign author_categories = author.people-category | join: "," %}
-      <div class="person-image"><img src="{{ site.baseurl }}/assets/images/people/{{ page.author }}.jpg" alt="{{ author.name }}"></div>
+      <div class="person-image"><img src="{{ site.baseurl }}/assets/images/{{ page.author }}.jpg" alt="{{ author.name }}"></div>
       <p><a href="{{ site.baseurl }}/people/{{page.author}}/">{{ author.name }}</a> is {{ author.position }}{% if author_categories contains 'Staff' %} in the {{ site.title }}{% endif %}.</p>
 
 <p>Cite this post: {{ author.name }}. "{{ page.title }}". Published {{ page.date | date: "%m/%d/%Y" }}. <a href="{{site.url}}/{{page.url}}">{{site.url}}/{{page.url}}</a>.</p>
