--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,26 +1,25 @@
 ---
 layout: default
 ---
+<section id="description">
+  <p>At the University of Virginia Library Scholars’ Lab, advanced students and researchers across the disciplines partner on digital projects and benefit from expert consultation and teaching. Our highly-trained faculty and staff focus on the digital humanities, geospatial information, and scholarly making and building at the intersection of the digital and physical worlds.</p>
+</section>
 
-<div class="home">
-<main id="main" role="main">
-  {{ content }}
+<section id="recent-posts">
+<h1>Recent Posts</h1>
 
-  <h1 class="page-heading">Posts</h1>
+<ul class="post-list">
+  {% for post in site.posts limit:4 %}
+    <li>
+      {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+      <span class="post-meta">{{ post.date | date: date_format }}</span>
 
-  <ul class="post-list">
-    {% for post in site.posts limit:10 %}
-      <li>
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+      <h2>
+        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+      </h2>
+    </li>
+  {% endfor %}
+</ul>
 
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-</main>
-</div>
+<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+<section>
