--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,4 @@
-<!-- Search Results by jekyll-lunr-js-search -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/node_modules/moment/min/moment.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="{{ site.baseurl }}/node_modules/lunr/lunr.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://unpkg.com/lunr/lunr.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{ site.baseurl }}/js/search.js" type="text/javascript" charset="utf-8"></script>
