--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}</title>
-<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700|Source+Code+Pro:400|Source+Serif+Pro:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
+{% include head.html %}
 {% include header.html %}
 <body>
 <main id="main" role="main">
 {{ content }}
 </main>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src="{{ site.baseurl }}/js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
+{% include footer.html %}
