have materialize integrated but site needs design input

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     {% endif %}
 </ul>
 
-<ul id="slide-nav" class="side-nav fixed">
+<ul id="slide-nav" class="side-nav grey lighten-4">
     <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
       {% include logotype.html %}
     </a>
