--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% include head.html %}
 {% include header.html %}
-<body>
+<body style="display:flex;">
 <main id="main" role="main">
 {{ content }}
 </main>
