Removes materialize classes.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<ul id="main-nav" class="side-nav fixed right-aligned grey lighten-4">
+<ul id="main-nav">
     <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
       {% include logotype.html %}
     </a>
@@ -13,7 +13,7 @@
     {% endif %}
 </ul>
 
-<ul id="slide-nav" class="side-nav grey lighten-4">
+<ul id="slide-nav">
     <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
       {% include logotype.html %}
     </a>
