--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,21 @@
-<ul id="main-nav" class="side-nav fixed right-aligned grey lighten-4">
-    <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
-      {% include logotype.html %}
-    </a>
-    {% assign page_paths = site.header_pages %}
-    {% if page_paths %}
-          {% for path in page_paths %}
-            {% assign my_page = site.pages | where: "path", path | first %}
-            {% if my_page.title %}
-            <li><a class="page-link" href="{{ my_page.url | relative_url }}" style="text-transform:lowercase; font-size:18px;">{{ my_page.slug | capitalize }}</a></li>
-            {% endif %}
-          {% endfor %}
-    {% endif %}
-</ul>
-
+<div class="navbar-fixed">
+<nav class="grey lighten-4" id="main-nav">
+   <div class="nav-wrapper" >
+     <a id="homelink" rel="home" href="{{ site.baseurl }}/" class="brand-logo center">{% include logotype.html %}</a>
+     <ul  class="right hide-on-med-and-down">
+         {% assign page_paths = site.header_pages %}
+         {% if page_paths %}
+               {% for path in page_paths %}
+                 {% assign my_page = site.pages | where: "path", path | first %}
+                 {% if my_page.title %}
+                 <li><a class="page-link" href="{{ my_page.url | relative_url }}" style="text-transform:lowercase; font-size:18px;">{{ my_page.slug | capitalize }}</a></li>
+                 {% endif %}
+               {% endfor %}
+         {% endif %}
+     </ul>
+   </div>
+ </nav>
+ </div>
 <ul id="slide-nav" class="side-nav grey lighten-4">
     <a id="homelink" rel="home" href="{{ site.baseurl }}/"><span class="audible">Scholars&#8217; Lab Home Page</span>
       {% include logotype.html %}
