--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 	{% include head.html %}
 
-	<body style="display:flex;">
+	<body>
 
 		{% include header.html %}
 
@@ -21,5 +21,5 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js" type="text/javascript" charset="utf-8"></script>
 
 	</body>
-	
+
 </html>
