Basic bg styles + auto-fill grid w/ max # square divs
-NB: if actually load rn, document looks very silly --> can turn off
     border on 'dot' divs to remove red grid.

-Also, the dots are squares for now, for which I am sorry, but we are
 taking care of the (decorative) CSS in the next commit.

-Explanations:
1.) index.html
  a. Edit font link: nix Open Sans, add Righteous.
  b. Add comments noting qualities/writing out names of various Google
     fonts. (From picking title font, but leaving b/c still useful
     given prototype nature.)
  c. Add div to hold 'dots', w/ 1 starter dot inside.

2.) style.css/style.scss
  a. Center title text on page; assign font styles.
  b. Set a background gradient.
  c. Make 'dot container' a grid with...
    i. as many columns as it can fit, provided they're all the same
       width *and* are all greater than or equal to 60px.
   ii. an indeterminate number of rows. (Enter JS.)
  d. Make each grid item's width and height 100% of the available space.
     (Grid items = 'dots'.)

3.) main.js
  a. Split grid into squares: set each row of the dot container equal to
     the calculated width of each column in the grid. ('Dot' div is now
     square, since height/width are 100% of grid item space.)
  b. Calculate the number of rows and columns there will be, based on
     the column width and height/width of container (which is entire
     viewport).
  c. Fill grid using 'for' loop that appends a clone of the original
     'dot' to the dot container X times, where X = rows * columns.

--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -8,9 +8,26 @@ body {
 	font-family: "Raleway", sans-serif;
 }
 
+/* Background colors: */
+  $purple:	rgba(127, 0, 255, 1);
+ $magenta: 	rgba(255, 0, 255, 1);
+ $purple9: 	rgba(127, 0, 255, .9);
+ $purple7: 	rgba(127, 0, 255, .7);
+ $purple5: 	rgba(127, 0, 255, .5);
+ $purple3: 	rgba(127, 0, 255, .3);
+$magenta9: 	rgba(255, 0, 255, .9);
+$magenta7: 	rgba(255, 0, 255, .7);
+$magenta5: 	rgba(255, 0, 255, .5);
+$magenta3: 	rgba(255, 0, 255, .3);
+
 .home-grid-wrapper {
 	position: relative;
 	display: grid;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	width: 100%;
+	background-image: linear-gradient(to bottom, rgb(42, 0, 255), $purple 30%, $magenta);
 }
 
 .home-title-wrapper {
@@ -19,4 +36,32 @@ body {
 
 .home-title__text {
 	position: relative;
+	font-family: "Righteous";
+	font-size: 6em;
+	line-height: 1;
+	text-align: center;
+	text-transform: uppercase;
+//	color: white; /* for testing layers */
+	z-index: 1;
+	span {
+	//	display: none;
+		line-height: 1;
+	}
+}
+
+.home-dots-wrapper {
+	position: absolute;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
+	grid-gap: 4px;
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
+	background-color: rgba(0,0,0,.7);
+}
+
+.home-dots__dot {
+	height: 100%;
+	width: 100%;
+	border: 1px solid red;
 }
