--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -6,12 +6,41 @@ body {
   padding: 0;
   font-family: "Raleway", sans-serif; }
 
+/* Background colors: */
 .home-grid-wrapper {
   position: relative;
-  display: grid; }
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(to bottom, #2a00ff, #7f00ff 30%, magenta); }
 
 .home-title-wrapper {
   position: relative; }
 
 .home-title__text {
-  position: relative; }
+  position: relative;
+  font-family: "Righteous";
+  font-size: 6em;
+  line-height: 1;
+  text-align: center;
+  text-transform: uppercase;
+  z-index: 1; }
+  .home-title__text span {
+    line-height: 1; }
+
+.home-dots-wrapper {
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
+  grid-gap: 4px;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.7); }
+
+.home-dots__dot {
+  height: 100%;
+  width: 100%;
+  border: 1px solid red; }
