--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -43,6 +43,8 @@ $magenta3: 	rgba(255, 0, 255, .3);
 	text-transform: uppercase;
 //	color: white; /* for testing layers */
 	z-index: 1;
+//	text-shadow: 0 0 2px $magenta5;
+//	transform: translate(0, 8px);
 	span {
 	//	display: none;
 		line-height: 1;
@@ -72,8 +74,8 @@ $magenta3: 	rgba(255, 0, 255, .3);
 		right: 50%;
 		bottom: 50%;
 		display: block;
-		height: 8px;
-		width: 8px;
+		height: 6px;
+		width: 6px;
 		transform: translate(50%, 50%);
 		border-radius: 50%;
 	//	background-color: rgba(255,255,255,.7);
@@ -87,7 +89,7 @@ $magenta3: 	rgba(255, 0, 255, .3);
 			height: 100%;
 			width: 100%;
 			border-radius: 50%;
-			background-image: linear-gradient(to bottom, rgb(42, 0, 255), $purple 30%, $magenta);
+			background-image: linear-gradient(to bottom, rgba(42, 0, 255, 1), $purple 30%, $magenta);
 			background-size: 100vw 100vh;
 		//	background-position: ** this is where things get tricksy but it's gotta be possible... **
 
