--- a/theme-testing/_sass/_navbar.scss
+++ b/theme-testing/_sass/_navbar.scss
@@ -4,18 +4,29 @@
 	left: 0;
 	display: block;
 	width: 100%;
-	height: 100px;
-	z-index: 1;
-	opacity: .5;
+	height: 80px;
+	z-index: 2; // title text = 1
 	transition: height 1s;
 }
 
-.topnav-scroll--down {
-	height: 60px;
+.topnav-scroll--hide {
+//	height: 0;
 }
 
-.home-wrapper {
-	position: relative;
+.topnav-scroll--down {
+//	height: 60px;
+	opacity: 1 !important;
+}
+
+.topnav__background {
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-image: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)), linear-gradient(to right, rgba(127, 0, 255, 1), rgba(127, 0, 255, 1));
+	opacity: 0;
+	transition: opacity .5s ease-out;
 }
 
 .topnav__content-wrapper {
@@ -25,7 +36,6 @@
 	justify-content: flex-end;
 	height: 100%;
 	width: 100%;
-	background-color: red;
 }
 
 .topnav-item {
