--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -4,16 +4,22 @@
   left: 0;
   display: block;
   width: 100%;
-  height: 100px;
-  z-index: 1;
-  opacity: .5;
+  height: 80px;
+  z-index: 2;
   transition: height 1s; }
 
 .topnav-scroll--down {
-  height: 60px; }
+  opacity: 1 !important; }
 
-.home-wrapper {
-  position: relative; }
+.topnav__background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), linear-gradient(to right, #7f00ff, #7f00ff);
+  opacity: 0;
+  transition: opacity .5s ease-out; }
 
 .topnav__content-wrapper {
   position: relative;
@@ -21,8 +27,7 @@
   align-items: center;
   justify-content: flex-end;
   height: 100%;
-  width: 100%;
-  background-color: red; }
+  width: 100%; }
 
 .topnav-item {
   border: 1px solid black;
