--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -118,3 +118,95 @@ body {
       border-radius: 50%;
       background-image: linear-gradient(to bottom, #2a00ff, #7f00ff 30%, magenta);
       background-size: 100vw 100vh; }
+
+/* ---------------------------------------------------------------------------- */
+/* CONTENT GRID: */
+.home-main-content {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(8, 12.5vw);
+  grid-auto-rows: 12.5vw;
+  background-color: black; }
+
+[class*="home-item--"] {
+  opacity: .9; }
+
+#s5 {
+  grid-column-start: 2; }
+
+#l6 {
+  grid-column-start: 5;
+  grid-row-start: 3; }
+
+#m7 {
+  grid-column-start: 1;
+  grid-row-start: 3; }
+
+#s8 {
+  grid-column-start: 4;
+  grid-row-start: 6; }
+
+#m10 {
+  grid-column-start: 1;
+  grid-row-start: 8;
+  z-index: 1; }
+
+#l11 {
+  grid-column-start: 2;
+  grid-row-start: 11; }
+
+#s12 {
+  grid-column-start: 6;
+  grid-row-start: 10; }
+
+#m13 {
+  grid-column-start: 6;
+  grid-row-start: 12; }
+
+#s14 {
+  grid-column-start: 2;
+  grid-row-start: 14; }
+
+#m15 {
+  grid-column-start: 4;
+  grid-row-start: 13; }
+
+#l16 {
+  grid-column-start: 3;
+  grid-row-start: 16; }
+
+#s17 {
+  grid-column-start: 6;
+  grid-row-start: 17; }
+
+#m18 {
+  grid-column-start: 1;
+  grid-row-start: 18; }
+
+#s19 {
+  grid-column-start: 1;
+  grid-row-start: 21; }
+
+#s20 {
+  grid-row-start: 21; }
+
+#s21 {
+  grid-row-start: 21; }
+
+#s22 {
+  grid-row-start: 21; }
+
+.home-item--small {
+  grid-row-end: span 2;
+  grid-column-end: span 2;
+  background-color: lightpink; }
+
+.home-item--medium {
+  grid-row-end: span 3;
+  grid-column-end: span 3;
+  background-color: lavender; }
+
+.home-item--large {
+  grid-row-end: span 4;
+  grid-column-end: span 4;
+  background-color: lightgreen; }
