--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -193,7 +193,7 @@ $magenta3: 	rgba(255, 0, 255, .3);
 
 /* Second direct contact: */
 
-.home__contact-link-2 {
+.home__contact--2 {
 	grid-area: contact2;
 }
 
